# damselfly

./: README.md  pyproject.toml  setup.cfg
analysis/plotting/scripts/: 2021415_plot_classification.py  2021415_plot_train_loss.py  210525_plot_training_data.py  210528_plot_ROC.py
analysis/scripts/: 2021423_compute_dataset_mf_scores.py  210526_confusion_matrix_trained_network.py  210528_ROC_curve_trained_network.py
damselfly/: _plot.py  _utils.py  data.py  models.py  plot.py  utils.py
damselfly/data/: augmentation.py  loaders.py  readers.py
damselfly/models/: autoencoder1d.py  cnn1d.py  cnn1d_complex.py  cnn1d_ensemble.py  cnn2d.py  dilationbankcnn1d.py  inception1d.py  mlp.py  resnet1d.py
damselfly/tests/: test_cnn1d_complex.py  test_cnn1d_complex_state_dict.py
damselfly/utils/: prune.py  train.py
data/scripts/: 210528_generate_multiclass_dataset.py  210615_combine_sim_data_convert_to_freq.py  210616_generate_binary_augmented_dataset.py  210616_test_dataloader.py  210617_check_simdata.py  210619_validate_dataset_SNR.py  21517_sum_raw_signals.py  21518_time2freq.py  MFParse.py
data/scripts/old/: 2021413_generate_noise.py  2021413_generate_noisy_data_set.py  202141_generate_train_data_from_eggs.py  21518_generate_dataset.py
deepfilter/: __init__.py  data.py  models.py  plot.py  utils.py
optim/scripts/: 210617_hyperparameter_optimize.py
optim/studies/: 210618_optim_cnn_model.db  210619_optim_cnn_model.db
training/scripts/: 210524_train_model.py  210602_train_model_separate_data.py
