[build-system]
requires = [ "setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "damselfly"
version = "1.0.0"
description = "PyTorch models for machine learning"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "h5py",
    "torch",
    "torchvision",
]

[project.urls]
